# Learning-rust

./: .gitignore  Cargo.toml  a3.txt  afile.txt  hello.html
.history/src/: closures_20251017162504.rs  closures_20251017162509.rs  closures_20251017162513.rs  closures_20251017162515.rs  closures_20251017162517.rs  closures_20251017162520.rs  closures_20251017162523.rs  closures_20251017162527.rs  closures_20251017162528.rs  closures_20251017162534.rs  closures_20251017162536.rs  closures_20251017162546.rs  closures_20251017163133.rs  closures_20251017163135.rs  closures_20251017163138.rs  closures_20251017163146.rs  closures_20251017163149.rs  closures_20251017163153.rs  closures_20251017163157.rs  closures_20251017163159.rs  closures_20251017163201.rs  closures_20251017163527.rs  closures_20251017163532.rs  closures_20251017163536.rs  closures_20251017163542.rs  closures_20251017163544.rs  closures_20251017163546.rs  closures_20251017163553.rs  closures_20251017163557.rs  closures_20251017163600.rs  closures_20251017163603.rs  closures_20251017163615.rs  closures_20251017163618.rs  closures_20251017163625.rs  closures_20251017163628.rs  closures_20251017163629.rs  closures_20251017163642.rs  closures_20251017163645.rs  closures_20251017163649.rs  (+372 more)
src/: closureconcept.rs  closures.rs  common_collection.rs  datatype.rs  dsa.rs  enumconcept.rs  file.txt  generics.rs  helpers.rs  input.rs  inputfromstd.rs  loopconcept.rs  main  main.rs  matchcondition.rs  minigrep.rs  modandfunction.rs  module_concept.rs  structconcept.rs  tictactoe.rs  user_input.rs  utils.rs  vector.rs
(+42 files in other folders)
